--- a/Tracklet.Api/Tracklet.Api.csproj
+++ b/Tracklet.Api/Tracklet.Api.csproj
@@ -7,7 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="FluentMigrator" Version="7.0.0" />
+        <PackageReference Include="FluentMigrator.Runner" Version="7.0.0" />
+        <PackageReference Include="Npgsql" Version="9.0.3" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Tracklet.Infra\Tracklet.Infra.csproj" />
     </ItemGroup>
 
 </Project>
