--- a/Tracklet.Infra/Tracklet.Infra.csproj
+++ b/Tracklet.Infra/Tracklet.Infra.csproj
@@ -6,4 +6,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentMigrator" Version="7.0.0" />
+      <PackageReference Include="FluentMigrator.Runner" Version="7.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    </ItemGroup>
+
 </Project>
