--- a/Tracklet.Api/Tracklet.Api.csproj
+++ b/Tracklet.Api/Tracklet.Api.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\Tracklet.Infra\Tracklet.Infra.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\v1\" />
+    </ItemGroup>
+
 </Project>
